assets/css/style.scss
---
---

@import "{{ site.theme }}";
@import url('https://fonts.googleapis.com/css?family=Lato:300,400');

body {
  font-family: 'Lato', sans-serif;
}

h1,h2,h3,h4,h5,h6 {
  font-weight: 400;
}

img {
  display: block;
  margin: 0 auto;
}

* + h2 {
  margin-top: 60px; /* add margin except in introduction */
}

a:hover, a:focus {
  font-weight: normal;
}

h1 a {
  color: #393939;
}

h1 a:hover {
  color: #393939;
  text-decoration:none;
}

a:hover {
  text-decoration:underline;
}

ul ul {
  margin-bottom: 0;
}

header {
  width: 200px;
}

header img {
  display: inline;
}

header ul.toc {
  list-style: none;
  list-style-type: disc;
  height: auto;
  padding: 0 12px;
  margin: 0 0 20px 0;
  background: none;
  border-radius: 0;
  border: 0;
  width: auto;
  color: #267CB9;
}

header ul.toc li {
  width: inherit;
  float: none;
  border-right: none;
  height: auto;
}

header ul.toc a {
  line-height: 1;
  font-size: 14px;
  color: #267CB9;
  display: inline;
  text-align: left;
  padding-top: 0;
  height: auto;
}

header ul.toc a:hover {
  font-weight: normal;
}

section {
  width: 570px;
}

.half-sized img {
  max-width: 48%;
  display: inline;
}

@media print, screen and (max-width: 960px) {
  body, h2, h3, h4, h5, h6, header ul.toc a {
    font-size: 1.05em;
  }
  header ul {
    position: static; /* fix TOC on mobile */
  }
}

img + em {
  display: block;
  text-align: center;
  font-size: small;
}

